<resources>
    <string name="app_name">COVID-19 Polska</string>
    <string name="all_cases">Wszystkie przypadki zachorowań </string>
    <string name="today_cases">Dzisiejsze przypadki zachorowań</string>
    <string name="active_cases">Aktywne przypadki zachorowań</string>
    <string name="all_cured">Wszystkie wyleczone przypadki</string>
    <string name="all_deaths">Wszystkie śmiertelne przypadki</string>
    <string name="today_deaths">Dzisiejsze śmiertelne przypadki</string>
    <string name="update_time">Aktualizacja:\t</string>
    <string name="data_source">Źródło danych: worldometers.info</string>
    <string name="download_error">Błąd pobierania</string>
    <string name="connection_dialog_title">Błąd</string>
    <string name="connection_dialog_message">Brak dostępu do Internetu</string>
    <string name="menu_counters">Dane aktualne</string>
    <string name="menu_trends">Dane historyczne</string>
    <string name="history_all">Wszystkie przypadki</string>
    <string name="history_daily">Przyrost dzienny</string>
    <string name="history_legend_cases">zachorowania</string>
    <string name="history_legend_deaths">zgony</string>
    <string name="history_legend_cured">wyleczenia</string>
    <string name="history_data_source">Źródło danych: Uniwersytet Johnsa Hopkinsa</string>
</resources>
